--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div class="logo"> Header Logo </div>
+    <div class="header"> Header Logo 
         <div class="right-links">
             <ul>
                 <li><a href="#">header link one</a></li>
@@ -21,6 +21,7 @@
             <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
                 <button class="signup">Sign Up</button>
                 <img src="" alt="">
+            </div>
 
         <div class="title">Some Random Information</div>
             <div class="container">
