--- a/index.html
+++ b/index.html
@@ -16,42 +16,50 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-
-        <h3>This website is awesome</h3>
-            <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-                <button class="signup">Sign Up</button>
-                <img src="" alt="">
-            </div>
-
-        <div class="title">Some Random Information</div>
-            <div class="container">
-                <div class="info">
+    </div>
+    <div class="container">
+        <div class="hero">
+            <h3>This website is awesome</h3>
+                <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+                    <button class="signup">Sign Up</button>
                     <img src="" alt="">
-                    <div class="text"> this is some subtext under an illustration or image</div>
-                </div>
-                <div class="info">
-                    <img src="" alt="">
-                    <div class="text"> this is some subtext under an illustration or image</div>
-                </div>
-                <div class="info">
-                    <img src="" alt="">
-                    <div class="text"> this is some subtext under an illustration or image</div>
-                </div>
-                <div class="info">
-                    <img src="" alt="">
-                    <div class="text"> this is some subtext under an illustration or image</div>
-                </div>
-            </div>
-        
-        <div class="quote">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe ot's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice. -Thor, God of Thunder</p>
         </div>
+    </div>
 
-<div class="bottom">
-    <h4>Call to action! It's time!</h4>
-    <p>Sign up for our product by click that button right over there!</p>
-    <button class="signup"> Sign Up </button>
-</div>
+<div class="title">Some Random Information</div>
+    <div class="container">
+                <div class="info">
+                    <img src="" alt="">
+                    <div class="text"> this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="">
+                    <div class="text"> this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="">
+                    <div class="text"> this is some subtext under an illustration or image</div>
+                </div>
+                <div class="info">
+                    <img src="" alt="">
+                    <div class="text"> this is some subtext under an illustration or image</div>
+                </div>
+    </div>
+
+    <div class="container">
+        <div class="quote">
+            <p>This is an inspiring quote, or a testimonial from a customer. Maybe ot's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+             <div class="thor">-Thor, God of Thunder</div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="bottom">
+            <h4>Call to action! It's time!</h4>
+                <p>Sign up for our product by click that button right over there!</p>
+                    <button class="signup"> Sign Up </button>
+        </div>
+    </div>
 
 
     <div class="footer">
